@@ -145,6 +145,18 @@
       <id>native</id>
       <build>
         <plugins>
+          <!-- testing in native profile to create reachability-metadata.json -->
+          <!-- https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>false</skipTests>
+              <argLine>-agentlib:native-image-agent=config-output-dir=target/classes/META-INF/native-image
+                --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.graalvm.buildtools</groupId>
             <artifactId>native-maven-plugin</artifactId>
@@ -158,13 +170,6 @@
                 </goals>
                 <phase>package</phase>
               </execution>
-              <execution>
-                <id>test-native</id>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <phase>test</phase>
-              </execution>
             </executions>
             <configuration>
               <imageName>client-native</imageName>
@@ -175,8 +180,9 @@
               <quickBuild>false</quickBuild>
               <buildArgs>
                 <buildArg>--no-fallback</buildArg>
-                <buildArg>-H:ResourceConfigurationFiles=${project.basedir}/resource-config.json</buildArg>
-                <buildArg>-H:ReflectionConfigurationFiles=${project.basedir}/reflection-config.json</buildArg>
+                <buildArg>-H:+SharedArenaSupport</buildArg>
+                <buildArg>--enable-url-protocols=http,https</buildArg>
+                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
               </buildArgs>
             </configuration>
           </plugin>
